--- a/share.yaml
+++ b/share.yaml
@@ -1,15 +1,33 @@
-az lock list --resource-group "dqe3-d-rg" --resource-type "factories" --namespace "Microsoft.DataFactory" --resource-name "$dqe3-d-01-adf"
+SCOPE="/subscriptions/eb940d7e-b120-4388-bbe7-4bee414e415b/resourceGroups/dqe3-d-rg/providers/Microsoft.DataFactory/factories/dqe3-d-01-adf"
 
-/subscriptions/eb940d7e-b120-4388-bbe7-4bee414e415b/resourceGroups/dqe3-d-rg/providers/Microsoft.DataFactory/factories/dqe3-d-01-adf
+SUBSCRIPTION_ID=$(echo "$SCOPE" | cut -d'/' -f3)
+RESOURCE_GROUP=$(echo "$SCOPE" | awk -F'/' '{for (i=1; i<=NF; i++) if ($i=="resourceGroups") print $(i+1)}')
+RESOURCE_TYPE=$(echo "$SCOPE" | awk -F'/' '{for (i=1; i<=NF; i++) if ($i=="providers") print $(i+2)}')
+RESOURCE_NAME=$(echo "$SCOPE" | awk -F'/' '{print $NF}')
+NAMESPACE=$(echo "$SCOPE" | awk -F'/' '{for (i=1; i<=NF; i++) if ($i=="providers") print $(i+1)}')
 
-Scope: /subscriptions/eb940d7e-b120-4388-bbe7-4bee414e415b/resourceGroups/dqe3-d-rg/providers/Microsoft.DataFactory/factories/dqe3-d-01-adf
-Subscription ID: eb940d7e-b120-4388-bbe7-4bee414e415b
-RG: dqe3-d-rg
-Type: dqe3-d-01-adf
-Name: dqe3-d-01-adf
-Namespace: Microsoft.DataFactory
-ERROR: (InvalidResourceType) The resource type could not be found in the namespace 'Microsoft.DataFactory' for api version '2016-09-01'.
-Code: InvalidResourceType
-Message: The resource type could not be found in the namespace 'Microsoft.DataFactory' for api version '2016-09-01'.
-Locks JSON: 
-/home/vsts/work/_temp/azureclitaskscript1752226501556.sh: line 31: [: : integer expression expected
+echo "Scope: $SCOPE"
+echo "Subscription ID: $SUBSCRIPTION_ID"
+echo "RG: $RESOURCE_GROUP"
+echo "Type: $RESOURCE_TYPE"
+echo "Name: $RESOURCE_NAME"
+echo "Namespace: $NAMESPACE"
+
+az account set --subscription "$SUBSCRIPTION_ID"
+
+locks=$(az lock list \
+  --resource-group "$RESOURCE_GROUP" \
+  --namespace "$NAMESPACE" \
+  --resource-type "$RESOURCE_TYPE" \
+  --resource-name "$RESOURCE_NAME" \
+  -o json)
+
+echo "Locks JSON: $locks"
+
+# Optional: check if array is empty before processing
+if [ "$(echo "$locks" | jq length)" -eq 0 ]; then
+    echo "No locks found."
+else
+    echo "Locks found:"
+    echo "$locks" | jq .
+fi
