--- a/share.yaml
+++ b/share.yaml
@@ -1,5 +1,4 @@
 parameters:
-
   - name: targetEnvironment
     displayName: Target Environment
     type: string
@@ -22,50 +21,38 @@ parameters:
     displayName: Name of the Role to be removed (Reader, Contributor, etc)
     type: string
 
-
 variables:
   - group: Abnamro.Coesd.VariableGroup.GlobalVars 
   - template: ../parameter/global.variables.yml
-  - template: ../parameter/${{parameters.targetEnvironment}}.variables.yml  
+  - template: ../parameter/${{ parameters.targetEnvironment }}.variables.yml  
 
 trigger: none
-
 pr: none
 
 stages:
-  # create identities(Service principal and UAMI)
   - stage: RemoveRBACStage
     displayName: Remove RBAC Role
 
     jobs:
-
     - job: RemoveRBAC
       displayName: Remove RBAC Role
-
+      continueOnError: false
       steps:
 
       - task: AzureCLI@2
         name: ManageLocks
-        enabled: true
-        displayName: "Manage Locks and RBAC"
+        displayName: "Manage Locks and Remove"
         inputs:
           azureSubscription: '${{ variables.ResourceGroupName }}'
           scriptType: 'bash'
           scriptLocation: 'inlineScript'
           inlineScript: |
-            # Step 1: Define variables from scope
             SCOPE="${{ parameters.Scope }}"
-            SUBSCRIPTION_ID=$(echo $SCOPE | cut -d'/' -f3)
-
-            echo "Scope: $SCOPE"
-            echo "Subscription ID: $SUBSCRIPTION_ID"
-
-            # Step 2: List locks explicitly from the scope
             SUBSCRIPTION_ID=$(echo "$SCOPE" | cut -d'/' -f3)
-            RESOURCE_GROUP=$(echo "$SCOPE" | awk -F'/' '{for (i=1; i<=NF; i++) if ($i=="resourceGroups") print $(i+1)}')
-            RESOURCE_TYPE=$(echo "$SCOPE" | awk -F'/' '{for (i=1; i<=NF; i++) if ($i=="providers") print $(i+2)}')
+            RESOURCE_GROUP=$(echo "$SCOPE" | awk -F'/' '{for (i=1;i<=NF;i++) if ($i=="resourceGroups") print $(i+1)}')
+            RESOURCE_TYPE=$(echo "$SCOPE" | awk -F'/' '{for (i=1;i<=NF;i++) if ($i=="providers") print $(i+2)}')
             RESOURCE_NAME=$(echo "$SCOPE" | awk -F'/' '{print $NF}')
-            NAMESPACE=$(echo "$SCOPE" | awk -F'/' '{for (i=1; i<=NF; i++) if ($i=="providers") print $(i+1)}')
+            NAMESPACE=$(echo "$SCOPE" | awk -F'/' '{for (i=1;i<=NF;i++) if ($i=="providers") print $(i+1)}')
 
             echo "Scope: $SCOPE"
             echo "Subscription ID: $SUBSCRIPTION_ID"
@@ -85,99 +72,112 @@ stages:
 
             echo "Locks JSON: $locks"
 
+            # Export for downstream tasks
             echo "##vso[task.setvariable variable=locks;isOutput=true]$locks"
-            echo "Locks JSON: $locks"
 
             # Step 3: Remove each lock
-            if [ "$(echo "$locks" | jq length)" -eq 0 ]; then
-                echo "No locks found at scope $SCOPE."
-            else
-                for row in $(echo "${locks}" | jq -r '.[] | @base64'); do
-                    _jq() {
-                        echo "${row}" | base64 --decode | jq -r "$1"
-                    }
-
-                    LOCK_NAME=$(_jq '.Name')
-                    LOCK_LEVEL=$(_jq '.Level')
-                    LOCK_ID=$(_jq '.Id')
-
-                    echo "Removing lock: $LOCK_NAME at $LOCK_ID"
-                    az lock delete --ids "$LOCK_ID"
-                    echo "Lock '$LOCK_NAME' removed."
-                done
+            if [ "$(echo "$locks" | jq 'length')" -eq 0 ]; then
+              echo "No locks found at scope $SCOPE."
+              exit 0
             fi
 
+            for row in $(echo "$locks" | jq -r '.[] | @base64'); do
+              _jq() {
+                echo "${row}" | base64 --decode | jq -r "$1"
+              }
+
+              LOCK_NAME=$(_jq '.Name')
+              LOCK_ID=$(_jq '.Id')
+
+              echo "Removing lock: $LOCK_NAME at $LOCK_ID"
+              az lock delete --ids "$LOCK_ID"
+              echo "Lock '$LOCK_NAME' removed."
+            done
 
       - task: Bash@3
         displayName: "Echo Locks Variable"
         inputs:
           targetType: 'inline'
           script: |
-            echo "Locks variable from previous task:" $(ManageLocks.locks)
+            echo "Locks variable from previous task:"
+            echo "$locks"
+        env:
+          locks: $[ dependencies.RemoveRBAC.outputs['ManageLocks.locks'] ]
 
       - task: AzurePowerShell@5
         name: RemoveRBACRole
-        enabled: true
         displayName: "Remove RBAC Role"
         inputs:
           azurePowerShellVersion: LatestVersion
           azureSubscription: '${{ variables.ResourceGroupName }}'
           ScriptType: InlineScript
           Inline: |
-              $ErrorActionPreference = "Stop"
+            $ErrorActionPreference = "Stop"
 
-              $ObjectId = "${{ parameters.ObjectId }}"
-              $Scope = "${{ parameters.Scope }}"
-              $RoleDefinitionName = "${{ parameters.RoleDefinitionName }}"
+            $ObjectId = "${{ parameters.ObjectId }}"
+            $Scope = "${{ parameters.Scope }}"
+            $RoleDefinitionName = "${{ parameters.RoleDefinitionName }}"
 
-              try {
-                  $roleAssignments = Get-AzRoleAssignment -ObjectId $ObjectId -Scope $Scope -ErrorAction Stop | Where-Object {
-                      $_.RoleDefinitionName -eq $RoleDefinitionName
-                  }
+            try {
+                $roleAssignments = Get-AzRoleAssignment -ObjectId $ObjectId -Scope $Scope -ErrorAction Stop | Where-Object {
+                    $_.RoleDefinitionName -eq $RoleDefinitionName
+                }
 
-                  if (-not $roleAssignments) {
-                      Write-Output "No matching role assignments found directly at the specified scope."
-                  } else {
-                      foreach ($assignment in $roleAssignments) {
-                          Write-Output "Attempting to remove role assignment at scope: $($assignment.Scope)"
-                          try {
-                              Remove-AzRoleAssignment `
-                                -ObjectId $assignment.ObjectId `
-                                -Scope $assignment.Scope `
-                                -RoleDefinitionName $assignment.RoleDefinitionName `
-                                -Verbose -ErrorAction Stop
+                if (-not $roleAssignments) {
+                    Write-Output "No matching role assignments found directly at the specified scope."
+                } else {
+                    foreach ($assignment in $roleAssignments) {
+                        Write-Output "Attempting to remove role assignment at scope: $($assignment.Scope)"
+                        try {
+                            Remove-AzRoleAssignment `
+                              -ObjectId $assignment.ObjectId `
+                              -Scope $assignment.Scope `
+                              -RoleDefinitionName $assignment.RoleDefinitionName `
+                              -Verbose -ErrorAction Stop
 
-                              Write-Output "Removed successfully."
-                          } catch {
-                              Write-Error "Failed to remove role assignment: $_"
-                          }
-                      }
-                  }
-              } catch {
-                  Write-Error "Error fetching role assignments or permissions issue: $_"
-              }
+                            Write-Output "Removed successfully."
+                        } catch {
+                            Write-Error "Failed to remove role assignment: $_"
+                        }
+                    }
+                }
+            } catch {
+                Write-Error "Error fetching role assignments or permissions issue: $_"
+            }
 
       - task: AzureCLI@2
-        enabled: true
+        name: RestoreLocks
         displayName: "Restore Locks"
         inputs:
           azureSubscription: '${{ variables.ResourceGroupName }}'
           scriptType: 'bash'
           scriptLocation: 'inlineScript'
           inlineScript: |
-            # Restore locks
-            echo "lock variable: "$(ManageLocks.locks)
-            for row in $(echo $(ManageLocks.locks) | jq -r '.[] | @base64'); do
-                _jq() {
-                  echo ${row} | base64 --decode | jq -r ${1}
-                }
+            echo "Restoring locks..."
+            echo "Locks: $LOCKS_JSON"
 
-                LOCK_NAME=$(_jq '.Name')
-                LOCK_LEVEL=$(_jq '.Level')
-                LOCK_ID=$(_jq '.Id')
+            if [ -z "$LOCKS_JSON" ]; then
+              echo "No locks to restore."
+              exit 0
+            fi
 
-                echo "Restoring lock: $LOCK_NAME at $LOCK_ID"
-                az lock create --name "$LOCK_NAME" --lock-type "$LOCK_LEVEL" --ids "$LOCK_ID"
+            for row in $(echo "$LOCKS_JSON" | jq -r '.[] | @base64'); do
+              _jq() {
+                echo "${row}" | base64 --decode | jq -r "$1"
+              }
 
-                echo "Lock '$LOCK_NAME' restored."
+              LOCK_NAME=$(_jq '.Name')
+              LOCK_LEVEL=$(_jq '.Level')
+              LOCK_ID=$(_jq '.Id')
+              LOCK_SCOPE=$(echo "$LOCK_ID" | sed 's|/providers/.*||')
+
+              echo "Restoring lock: $LOCK_NAME at $LOCK_SCOPE"
+              az lock create \
+                --name "$LOCK_NAME" \
+                --lock-type "$LOCK_LEVEL" \
+                --scope "$LOCK_SCOPE"
+
+              echo "Lock '$LOCK_NAME' restored."
             done
+        env:
+          LOCKS_JSON: $[ dependencies.RemoveRBAC.outputs['ManageLocks.locks'] ]
